examples/test/testpolicy5603.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5603
  namespace: namespace21
spec:
  podSelector:
    matchLabels:
      key5: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value3
          key32: value18
          key43: value8
      podSelector:
        matchLabels:
          key31: value34
